<resources>
    // h d w m y interval
    <string name="hourly">Hourly</string>
    <string name="no_data_sad">No Data :(</string>
    <string name="daily">Daily</string>
    <string name="loading_url">https://assets2.lottiefiles.com/packages/lf20_hocmonst.json</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="from_time">From time</string>
    <string name="to_time">To time</string>
    <string name="average">Average</string>
    <string name="save_to_device">Save to device</string>
    <string name="share">Share</string>
    <string name="last_24_hours">Last 24 hours</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="pick_dates">Pick dates</string>
    <string name="click_submit">Click submit</string>
    <string name="custom">Custom</string>
    <string name="no_data">No data</string>
    <string name="no_data_for_given_time">No data for given time</string>
    <string name="app_name">SmartFarm</string>
    <string name="app_id">smartfarm-thpgu</string>
    <string name="please_enter_device_name">Please enter a device name</string>
    <string name="home">Home</string>
    <string name="networks">Networks</string>
    <string name="settings">Settings</string>
    <string name="loading_data_from_sp">No internet connection. Loading latest saved data, which might be outdated.</string>
    <string name="device_settings">Device settings</string>
    <string name="measure_interval">Measurement interval</string>
    <string name="measurement_info">This time indicates how long should the device wait between measurements.\nh - hours, m - minutes</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="produce_info">Choose which crop type the device is measuring</string>
    <string name="yes">Yes</string>
    <string name="Status">Status</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="status_info">This button indicates whether the device is on or off. Green button indicates \'On\'.</string>
    <string name="no">No</string>
    <string name="loading_weather">Loading weather…</string>
    <string name="error_loading_weather">Error loading weather</string>
    <string name="camera_permission_required_message">In order to add a new device, a camera permission is required.
    In order to grant permission go to Settings -> Apps -> SmartFarm -> Permissions and enable the "Camera" permission.</string>
    <string name="location_permission_required_message">In order to use the weather feature, a location permission is required.
    In order to grant permission go to Settings -> Apps -> SmartFarm -> Permissions and enable the "Location" permission.</string>
    <string name="location_services_required">In order to user the weather feature, the location services are needed. Please
    activate the location services and press the refresh weather button</string>
    <string name="storage_permission_required_message">In order to save the data to the device, a storage permission is required.
    In order to grant permission go to Settings -> Apps -> SmartFarm -> Permissions and enable the "Files and media" permission.</string>
    <string name="file_saved_successfully">File saved successfully!</string>
    <string name="location_required">Location Required!</string>
    <string name="new_network">New Network</string>
    <string name="new_device">New Device</string>
    <string name="device_description">Description</string>
    <string name="wrong_id">Wrong ID</string>
    <string name="my_networks">My Networks</string>
    <string name="device_already_active">Device already active</string>
    <string name="there_are_no_devices">There are no devices in this network</string>
    <string name="permission_missing">Permission Missing!</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="create">Create</string>
    <string name="no_data_to_save">No data to save!</string>
    <string name="no_data_to_share">No data to share!</string>
    <string name="no_data_to_chart">No data to chart!</string>

    <string name="active_devices">Active devices</string>
    <string name="my_devices">My Devices</string>

    <string name="please_enter_deviceID">Please enter device ID</string>

    <string name="device_id">Device ID</string>
    <string name="device_name">Device Name</string>

    <string name="latest_data">Latest Data</string>

    <string name="measured_value">Measured Value:</string>
    <string name="optimal_value">Optimal value:</string>
    <string name="measured_category">Measured Category:</string>
    <string name="optimal_category">Optimal Category:</string>
    <string name="recommendation">Recommendation:</string>
    <string name="devices">Devices</string>
    <string name="too_much_light">Too much light</string>
    <string name="not_enough_light">Not enough light</string>
    <string name="light_just_right">Light is just right</string>
    <string name="too_much_sun">Too much sun</string>
    <string name="not_enough_sun">Not enough sun</string>
    <string name="light_just_sun">Sun is just right</string>
    <string name="too_much_water">Too much water</string>
    <string name="not_enough_water">Not enough water</string>
    <string name="water_just_right">Water is just right</string>
    <string name="too_cold">It is too cold</string>
    <string name="too_hot">It is too hot</string>
    <string name="network_name">Network Name</string>
    <string name="error_changing_interval">Error changing interval: </string>
    <string name="error_changing_switch">Error switching device on/off: </string>
    <string name="error_updating_device">Error updating device: </string>
    <string name="no_networks">Hmm, no networks. Would you like to add a new network?</string>
    <string name="produce">Produce</string>
    <string name="produce_error">Please select device produce</string>
    <string name="credits">Goodware, Freepik, Becris, pixelmeetup</string>

    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="read_new_data">Read new data</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="soil_moisture">Soil Moisture</string>
    <string name="light_exposure">Light Exposure</string>
    <string name="uv_exposure">UV Exposure</string>
    <string name="scan_barcode">Scan QR code</string>

    <string name="turnip">Turnip</string>
    <string name="radish">Radish</string>
    <string name="ginger">Ginger</string>
    <string name="peas">Peas</string>
    <string name="cucumber">Cucumber</string>
    <string name="chili">Chili</string>
    <string name="potato">Potato</string>
    <string name="tomato">Tomato</string>
    <string name="carrot">Carrot</string>
    <string name="eggplant">Eggplant</string>
    <string name="corn">Corn</string>
    <string name="chard">Chard</string>
    <string name="cabbage">Cabbage</string>
    <string name="celery">Celery</string>
    <string name="sweet_potato">Sweet potato</string>
    <string name="kale">Kale</string>
    <string name="lemon">Lemon</string>
    <string name="apple">Apple</string>
    <string name="orange">Orange</string>
    <string name="pear">Pear</string>
    <string name="broccoli">Broccoli</string>
    <string name="kiwi">Kiwi</string>
    <string name="melon">Melon</string>
    <string name="cashew">Cashew</string>
    <string name="peach">Peach</string>
    <string name="avocado">Avocado</string>
    <string name="cherry">Cherry</string>
    <string name="mangosteen">Mangosteen</string>
    <string name="papaya">Papaya</string>
    <string name="watermelon">Watermelon</string>
    <string name="raspberry">Raspberry</string>
    <string name="bell_pepper">Bell pepper</string>
    <string name="coconut">Coconut</string>
    <string name="banana">Banana</string>
    <string name="strawberry">Strawberry</string>
    <string name="mango">Mango</string>
    <string name="pineapple">Pineapple</string>
    <string name="pomegranate">Pomegranate</string>
    <string name="plum">Plum</string>
    <string name="durian">Durian</string>
    <string name="starfruit">Starfruit</string>
    <string name="grape">Grape</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="blueberry">Blueberry</string>
    <string name="onion">Onion</string>
    <string name="beetroot">Beetroot</string>
    <string name="garlic">Garlic</string>
    <string name="asparagus">Asparagus</string>
    <string name="spring_onion">Spring onion</string>

    <string name="hi">Hi</string>
    <array name="initial_slider_values">
        <item>1.0</item>
        <item>5.0</item>
        <item>10.0</item>
        <item>15.0</item>
        <item>30.0</item>
        <item>60.0</item>
        <item>90.0</item>
        <item>2.0</item>
        <item>4.0</item>
        <item>6.0</item>
        <item>8.0</item>
        <item>12.0</item>
        <item>24.0</item>
    </array>


    <string-array name="produce">
        <item>@string/turnip</item>
        <item>@string/radish</item>
        <item>@string/ginger</item>
        <item>@string/peas</item>
        <item>@string/cucumber</item>
        <item>@string/chili</item>
        <item>@string/potato</item>
        <item>@string/tomato</item>
        <item>@string/carrot</item>
        <item>@string/eggplant</item>
        <item>@string/corn</item>
        <item>@string/chard</item>
        <item>@string/cabbage</item>
        <item>@string/celery</item>
        <item>@string/sweet_potato</item>
        <item>@string/kale</item>
        <item>@string/lemon</item>
        <item>@string/apple</item>
        <item>@string/orange</item>
        <item>@string/pear</item>
        <item>@string/broccoli</item>
        <item>@string/kiwi</item>
        <item>@string/melon</item>
        <item>@string/cashew</item>
        <item>@string/peach</item>
        <item>@string/avocado</item>
        <item>@string/cherry</item>
        <item>@string/mangosteen</item>
        <item>@string/papaya</item>
        <item>@string/watermelon</item>
        <item>@string/raspberry</item>
        <item>@string/bell_pepper</item>
        <item>@string/coconut</item>
        <item>@string/banana</item>
        <item>@string/strawberry</item>
        <item>@string/mango</item>
        <item>@string/pineapple</item>
        <item>@string/pomegranate</item>
        <item>@string/plum</item>
        <item>@string/durian</item>
        <item>@string/starfruit</item>
        <item>@string/grape</item>
        <item>@string/mushrooms</item>
        <item>@string/blueberry</item>
        <item>@string/onion</item>
        <item>@string/beetroot</item>
        <item>@string/garlic</item>
        <item>@string/asparagus</item>
        <item>@string/spring_onion</item>
    </string-array>


    <!-- Not to translate !-->


    <string name="base_icon_link">https://openweathermap.org/img/wn/</string>
    <string name="error_fetching_data">"Error fetching data! "</string>
</resources>




