<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/historicData_LAY_pickerFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historicData_LST_networkList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historicData_LAY_pickerFrame" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/historicData_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_data_for_given_time"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/stats_FAB_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/ic_baseline_more_horiz_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:menu_colorNormal="@color/colorSecondary"
        app:menu_colorPressed="@color/colorSecondary"
        app:menu_labels_colorRipple="@color/colorPrimary">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/stats_FAB_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_save_24"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorSecondary"
            app:fab_colorRipple="@color/colorSecondary"
            fab:fab_label="@string/save_to_device"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/stats_FAB_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_share_24"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorSecondary"
            app:fab_colorRipple="@color/colorSecondary"
            fab:fab_label="@string/share"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/stats_FAB_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_bar_chart_24_white"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorSecondary"
            app:fab_colorRipple="@color/colorSecondary"
            fab:fab_label="@string/share"
            fab:fab_size="mini" />


    </com.github.clans.fab.FloatingActionMenu>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/historicData_IMG_lottieLoading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

</androidx.constraintlayout.widget.ConstraintLayout>